--- a/Instruct/CV_Hand_Model/hand_landmarker_ex.ipynb
+++ b/Instruct/CV_Hand_Model/hand_landmarker_ex.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16ed5de0760>"
+       "<matplotlib.image.AxesImage at 0x2397f01fdf0>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,10 +50,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16ed9b295d0>"
+       "<matplotlib.image.AxesImage at 0x23921cac8e0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -103,22 +103,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Ivan\\Documents\\CMA\\ML Parkinsons Repository\\Parkinson-Prediagnosis\\Instruct\\CV_Hand_Model\\venv\\lib\\site-packages\\google\\protobuf\\symbol_database.py:55: UserWarning: SymbolDatabase.GetPrototype() is deprecated. Please use message_factory.GetMessageClass() instead. SymbolDatabase.GetPrototype() will be removed soon.\n",
-      "  warnings.warn('SymbolDatabase.GetPrototype() is deprecated. Please '\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing Video...\n",
       "      Frame  Landmark Index         X         Y             Z\n",
       "0         0               0  0.218992  0.587607  5.433026e-07\n",
       "1         0               1  0.419347  0.641397  3.021685e-03\n",
@@ -126,13 +117,13 @@
       "3         0               3  0.726380  0.588316  4.229122e-02\n",
       "4         0               4  0.827614  0.558464  6.941080e-02\n",
       "...     ...             ...       ...       ...           ...\n",
-      "9466    450              16  0.357878  0.273194 -1.789764e-01\n",
-      "9467    450              17  0.210730  0.501756 -2.871767e-02\n",
-      "9468    450              18  0.172599  0.432011 -7.362085e-02\n",
-      "9469    450              19  0.144765  0.392057 -1.106491e-01\n",
-      "9470    450              20  0.120486  0.357926 -1.346530e-01\n",
+      "4531    215              16  0.399443  0.251246 -2.172351e-01\n",
+      "4532    215              17  0.201804  0.474315 -6.836932e-02\n",
+      "4533    215              18  0.185564  0.397264 -1.235648e-01\n",
+      "4534    215              19  0.172955  0.352828 -1.646430e-01\n",
+      "4535    215              20  0.159659  0.317826 -1.921317e-01\n",
       "\n",
-      "[9471 rows x 5 columns]\n"
+      "[4536 rows x 5 columns]\n"
      ]
     }
    ],
@@ -203,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
