model ran with duplicates data

--- a/NLP/data_analysis.ipynb
+++ b/NLP/data_analysis.ipynb
@@ -189,6 +189,75 @@
     "print(y_test)\n",
     "print('pred: ', y_pred, '; accuracy:', accuracy)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run with duplciates dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_data_duplicates = pd.read_csv('NLP/Data/SpontaneousDialogue/All_Data_Duplicates.csv')\n",
+    "all_data_duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30     1\n",
+      "67     1\n",
+      "62     1\n",
+      "47     0\n",
+      "42     0\n",
+      "40     0\n",
+      "90     1\n",
+      "45     0\n",
+      "10     0\n",
+      "0      0\n",
+      "18     0\n",
+      "31     1\n",
+      "97     1\n",
+      "85     0\n",
+      "76     0\n",
+      "4      0\n",
+      "79     0\n",
+      "33     1\n",
+      "12     0\n",
+      "26     1\n",
+      "100    1\n",
+      "Name: target, dtype: int64\n",
+      "pred:  [0 0 1 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 0 1 0] ; accuracy: 0.7619047619047619\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = all_data_duplicates[['FlR','PpN Rate', 'Vb Rate', 'CmN rate']]\n",
+    "y = all_data_duplicates['target']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2, random_state=42)\n",
+    "\n",
+    "clf = RandomForestClassifier(max_depth=2, random_state=0)\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "\n",
+    "y_pred = clf.predict(X_test)\n",
+    "accuracy = accuracy_score(y_pred=y_pred, y_true= y_test)\n",
+    "\n",
+    "print(y_test)\n",
+    "print('pred: ', y_pred, '; accuracy:', accuracy)\n"
+   ]
   }
  ],
  "metadata": {
