--- a/NLP/data_analysis.ipynb
+++ b/NLP/data_analysis.ipynb
@@ -199,9 +199,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>Audio path</th>\n",
+       "      <th>participant</th>\n",
+       "      <th>interviewer</th>\n",
+       "      <th>Total Words</th>\n",
+       "      <th>Vb Rate</th>\n",
+       "      <th>Verbs</th>\n",
+       "      <th>CmN rate</th>\n",
+       "      <th>Common Nouns</th>\n",
+       "      <th>PpN Rate</th>\n",
+       "      <th>Proper Nouns</th>\n",
+       "      <th>FlR</th>\n",
+       "      <th>Filler Words</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>NLP/Data/SpontaneousDialogue/HC/ID19_hc_0_0_0.wav</td>\n",
+       "      <td>Thank you. This was great. Now let's continue ...</td>\n",
+       "      <td>Well, there are so many nice buildings. Get yo...</td>\n",
+       "      <td>101</td>\n",
+       "      <td>0.129</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.109</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.059</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>NLP/Data/SpontaneousDialogue/HC/ID09_hc_0_0_0.wav</td>\n",
+       "      <td>No problem. Okay, so in London, there are lots...</td>\n",
+       "      <td>Great. Thank you. Now we try the open dialogue...</td>\n",
+       "      <td>347</td>\n",
+       "      <td>0.156</td>\n",
+       "      <td>54</td>\n",
+       "      <td>0.141</td>\n",
+       "      <td>49</td>\n",
+       "      <td>0.052</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.020</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>NLP/Data/SpontaneousDialogue/HC/ID08_hc_0_0_0.wav</td>\n",
+       "      <td>Okay, great. Thank you. Okay. Okay. Yeah. Okay...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>242</td>\n",
+       "      <td>0.136</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.107</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0.083</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0.012</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>NLP/Data/SpontaneousDialogue/HC/ID10_hc_0_0_0.wav</td>\n",
+       "      <td>Yeah, I have finished reading. Yeah. Okay. Mos...</td>\n",
+       "      <td>Yeah. Thank you. Let's try the spontaneous dia...</td>\n",
+       "      <td>247</td>\n",
+       "      <td>0.166</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0.109</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0.053</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.028</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>NLP/Data/SpontaneousDialogue/HC/ID05_hc_0_0_0.wav</td>\n",
+       "      <td>So I would go and see the Tower of London, whi...</td>\n",
+       "      <td>Thank you. Great. Okay, let's continue with th...</td>\n",
+       "      <td>225</td>\n",
+       "      <td>0.124</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0.107</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.058</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.049</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NLP/Data/SpontaneousDialogue/PD/ID20_pd_3_0_1.wav</td>\n",
+       "      <td>Great. Thank you very much. This was good. Let...</td>\n",
+       "      <td>I recommend most of the museums. Science museu...</td>\n",
+       "      <td>106</td>\n",
+       "      <td>0.170</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.104</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.038</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.009</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NLP/Data/SpontaneousDialogue/PD/ID02_pd_2_0_0.wav</td>\n",
+       "      <td>Okay, so this is your. Your first time in Lond...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>374</td>\n",
+       "      <td>0.152</td>\n",
+       "      <td>57</td>\n",
+       "      <td>0.134</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0.040</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.011</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NLP/Data/SpontaneousDialogue/PD/ID04_pd_2_0_1.wav</td>\n",
+       "      <td>It's okay. Yes, yes. I've been asked that ques...</td>\n",
+       "      <td>Thanks. This was great. Okay, now we try to ha...</td>\n",
+       "      <td>331</td>\n",
+       "      <td>0.166</td>\n",
+       "      <td>55</td>\n",
+       "      <td>0.136</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0.048</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0.015</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NLP/Data/SpontaneousDialogue/PD/ID16_pd_2_0_0.wav</td>\n",
+       "      <td>It really is. Okay. Okay, well, in London. The...</td>\n",
+       "      <td>Okay, great. Thank you very much. Okay, now I'...</td>\n",
+       "      <td>279</td>\n",
+       "      <td>0.147</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0.118</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0.054</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NLP/Data/SpontaneousDialogue/PD/ID33_pd_3_2_2.wav</td>\n",
+       "      <td>Hello. Hello. Yes. What type of food you like?...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>123</td>\n",
+       "      <td>0.154</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.130</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0.114</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.016</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>102 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     target                                         Audio path  \\\n",
+       "0         0  NLP/Data/SpontaneousDialogue/HC/ID19_hc_0_0_0.wav   \n",
+       "1         0  NLP/Data/SpontaneousDialogue/HC/ID09_hc_0_0_0.wav   \n",
+       "2         0  NLP/Data/SpontaneousDialogue/HC/ID08_hc_0_0_0.wav   \n",
+       "3         0  NLP/Data/SpontaneousDialogue/HC/ID10_hc_0_0_0.wav   \n",
+       "4         0  NLP/Data/SpontaneousDialogue/HC/ID05_hc_0_0_0.wav   \n",
+       "..      ...                                                ...   \n",
+       "97        1  NLP/Data/SpontaneousDialogue/PD/ID20_pd_3_0_1.wav   \n",
+       "98        1  NLP/Data/SpontaneousDialogue/PD/ID02_pd_2_0_0.wav   \n",
+       "99        1  NLP/Data/SpontaneousDialogue/PD/ID04_pd_2_0_1.wav   \n",
+       "100       1  NLP/Data/SpontaneousDialogue/PD/ID16_pd_2_0_0.wav   \n",
+       "101       1  NLP/Data/SpontaneousDialogue/PD/ID33_pd_3_2_2.wav   \n",
+       "\n",
+       "                                           participant  \\\n",
+       "0    Thank you. This was great. Now let's continue ...   \n",
+       "1    No problem. Okay, so in London, there are lots...   \n",
+       "2    Okay, great. Thank you. Okay. Okay. Yeah. Okay...   \n",
+       "3    Yeah, I have finished reading. Yeah. Okay. Mos...   \n",
+       "4    So I would go and see the Tower of London, whi...   \n",
+       "..                                                 ...   \n",
+       "97   Great. Thank you very much. This was good. Let...   \n",
+       "98   Okay, so this is your. Your first time in Lond...   \n",
+       "99   It's okay. Yes, yes. I've been asked that ques...   \n",
+       "100  It really is. Okay. Okay, well, in London. The...   \n",
+       "101  Hello. Hello. Yes. What type of food you like?...   \n",
+       "\n",
+       "                                           interviewer  Total Words  Vb Rate  \\\n",
+       "0    Well, there are so many nice buildings. Get yo...          101    0.129   \n",
+       "1    Great. Thank you. Now we try the open dialogue...          347    0.156   \n",
+       "2                                                  NaN          242    0.136   \n",
+       "3    Yeah. Thank you. Let's try the spontaneous dia...          247    0.166   \n",
+       "4    Thank you. Great. Okay, let's continue with th...          225    0.124   \n",
+       "..                                                 ...          ...      ...   \n",
+       "97   I recommend most of the museums. Science museu...          106    0.170   \n",
+       "98                                                 NaN          374    0.152   \n",
+       "99   Thanks. This was great. Okay, now we try to ha...          331    0.166   \n",
+       "100  Okay, great. Thank you very much. Okay, now I'...          279    0.147   \n",
+       "101                                                NaN          123    0.154   \n",
+       "\n",
+       "     Verbs  CmN rate  Common Nouns  PpN Rate  Proper Nouns    FlR  \\\n",
+       "0       13     0.109            11     0.059             6  0.000   \n",
+       "1       54     0.141            49     0.052            18  0.020   \n",
+       "2       33     0.107            26     0.083            20  0.012   \n",
+       "3       41     0.109            27     0.053            13  0.028   \n",
+       "4       28     0.107            24     0.058            13  0.049   \n",
+       "..     ...       ...           ...       ...           ...    ...   \n",
+       "97      18     0.104            11     0.038             4  0.009   \n",
+       "98      57     0.134            50     0.040            15  0.011   \n",
+       "99      55     0.136            45     0.048            16  0.015   \n",
+       "100     41     0.118            33     0.054            15  0.025   \n",
+       "101     19     0.130            16     0.114            14  0.016   \n",
+       "\n",
+       "     Filler Words  \n",
+       "0               0  \n",
+       "1               7  \n",
+       "2               3  \n",
+       "3               7  \n",
+       "4              11  \n",
+       "..            ...  \n",
+       "97              1  \n",
+       "98              4  \n",
+       "99              5  \n",
+       "100             7  \n",
+       "101             2  \n",
+       "\n",
+       "[102 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "all_data_duplicates = pd.read_csv('NLP/Data/SpontaneousDialogue/All_Data_Duplicates.csv')\n",
     "all_data_duplicates"
@@ -209,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
